--- a/esp-hal-embassy/Cargo.toml
+++ b/esp-hal-embassy/Cargo.toml
@@ -4,7 +4,7 @@ version      = "0.4.0"
 edition      = "2021"
 rust-version = "1.79.0"
 description  = "Embassy support for esp-hal"
-repository   = "https://github.com/Ion-Mobility/esp-hal"
+repository   = "https://github.com/esp-rs/esp-hal"
 license      = "MIT OR Apache-2.0"
 
 [package.metadata.docs.rs]
@@ -17,7 +17,7 @@ defmt               = { version = "0.3.8", optional = true }
 document-features   = "0.2.10"
 embassy-executor    = { version = "0.6.0", optional = true }
 embassy-time-driver = { version = "0.1.0", features = [ "tick-hz-1_000_000" ] }
-esp-hal = { version = "0.21.0", features = [ "esp32s3", "log"] }
+esp-hal             = { version = "0.21.0", path = "../esp-hal" }
 log                 = { version = "0.4.22", optional = true }
 macros              = { version = "0.14.0", features = ["embassy"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
 portable-atomic     = "1.9.0"
