--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -14,28 +14,39 @@ cfg-if              = "1.0.0"
 critical-section    = "1.1.3"
 embassy-executor    = { version = "0.6.0", features = ["task-arena-size-20480"] }
 embassy-futures     = "0.1.1"
-embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
-embassy-sync        = "0.6.0"
+embassy-net = { version = "0.5.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
+embassy-sync        = "0.6.1"
 embassy-time        = "0.3.2"
-embassy-usb         = { version = "0.2.0", default-features = false }
+embassy-usb         = { version = "0.3.0", default-features = false }
 embedded-can        = "0.4.1"
 embedded-hal-async  = "1.0.0"
 embedded-io         = { version = "0.6.1", default-features = false }
 embedded-io-async   = "0.6.1"
 embedded-storage    = "0.3.1"
-esp-alloc           = { path = "../esp-alloc" }
-esp-backtrace       = { path = "../esp-backtrace", features = ["exception-handler", "panic-handler", "println"] }
-esp-hal             = { path = "../esp-hal", features = ["log"] }
-esp-hal-embassy     = { path = "../esp-hal-embassy", optional = true }
-esp-ieee802154      = { path = "../esp-ieee802154", optional = true }
-esp-println         = { path = "../esp-println", features = ["log"] }
-esp-storage         = { path = "../esp-storage", optional = true }
-esp-wifi            = { path = "../esp-wifi", features = ["log"], optional = true }
+# esp-alloc           = { path = "../esp-alloc" }
+esp-alloc           = "0.5.0"
+# esp-backtrace       = { path = "../esp-backtrace", features = ["exception-handler", "panic-handler", "println"] }
+esp-backtrace       = { version = "0.14.2", features = ["esp32s3",
+                                                        "exception-handler",
+                                                        "panic-handler",
+                                                        "println", ] }
+# esp-hal             = { path = "../esp-hal", features = ["log"] }
+esp-hal             = { version = "0.22.0", features = [ "esp32s3", "log"] }
+# esp-hal-embassy     = { path = "../esp-hal-embassy", optional = true }
+esp-hal-embassy     = { version = "0.5.0", features = ["esp32s3"], optional = true}
+# esp-ieee802154      = { path = "../esp-ieee802154", optional = true }
+# esp-println         = { path = "../esp-println", features = ["log"] }
+esp-println         = { version = "0.12.0", features = ["esp32s3", "log"] }
+# esp-storage         = { path = "../esp-storage", optional = true }
+esp-storage         = {version = "0.4.0", features = ["esp32s3"], optional = true}
+# esp-wifi            = { path = "../esp-wifi", features = ["log"], optional = true }
+esp-wifi            = { version = "0.11.0", features = ["esp32s3",
+                                                        "wifi"], optional = true}
 fugit               = "0.3.7"
 heapless            = "0.8.0"
 hmac                = { version = "0.12.1", default-features = false }
-ieee80211           = { version = "0.4.0", default-features = false }
-ieee802154          = "0.6.1"
+ieee80211           = { version = "0.5.0", default-features = false }
+# ieee802154          = "0.6.1"
 log                 = "0.4.22"
 nb                  = "1.1.0"
 portable-atomic     = { version = "1.9.0",  default-features = false }
@@ -54,16 +65,16 @@ edge-nal-embassy = "0.3.0"
 
 [features]
 esp32   = ["esp-hal/esp32",   "esp-backtrace/esp32",   "esp-hal-embassy?/esp32",   "esp-println/esp32",   "esp-storage?/esp32",   "esp-wifi?/esp32"]
-esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-hal-embassy?/esp32c2", "esp-println/esp32c2", "esp-storage?/esp32c2", "esp-wifi?/esp32c2", ]
-esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy?/esp32c3", "esp-println/esp32c3", "esp-storage?/esp32c3", "esp-wifi?/esp32c3"]
-esp32c6 = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy?/esp32c6", "esp-println/esp32c6", "esp-storage?/esp32c6", "esp-wifi?/esp32c6", "esp-ieee802154?/esp32c6"]
-esp32h2 = ["esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-hal-embassy?/esp32h2", "esp-println/esp32h2", "esp-storage?/esp32h2", "esp-wifi?/esp32h2", "esp-ieee802154?/esp32h2"]
+# esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-hal-embassy?/esp32c2", "esp-println/esp32c2", "esp-storage?/esp32c2", "esp-wifi?/esp32c2", ]
+# esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy?/esp32c3", "esp-println/esp32c3", "esp-storage?/esp32c3", "esp-wifi?/esp32c3"]
+# esp32c6 = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy?/esp32c6", "esp-println/esp32c6", "esp-storage?/esp32c6", "esp-wifi?/esp32c6", "esp-ieee802154?/esp32c6"]
+# esp32h2 = ["esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-hal-embassy?/esp32h2", "esp-println/esp32h2", "esp-storage?/esp32h2", "esp-wifi?/esp32h2", "esp-ieee802154?/esp32h2"]
 esp32s2 = ["esp-hal/esp32s2", "esp-backtrace/esp32s2", "esp-hal-embassy?/esp32s2", "esp-println/esp32s2", "esp-storage?/esp32s2", "esp-wifi?/esp32s2"]
 esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-hal-embassy?/esp32s3", "esp-println/esp32s3", "esp-storage?/esp32s3", "esp-wifi?/esp32s3"]
 
-esp-wifi = ["dep:esp-wifi"]
+# esp-wifi = ["dep:esp-wifi"]
 
-embassy                = ["dep:esp-hal-embassy"]
+embassy             = ["dep:esp-hal-embassy"]
 embassy-generic-timers = ["embassy-time/generic-queue-8"]
 
 [profile.release]
@@ -74,3 +85,12 @@ incremental      = false
 opt-level        = 3
 lto = 'fat'
 overflow-checks  = false
+
+[patch.crates-io]
+esp-hal             = { git = "https://github.com/Ion-Mobility/esp-hal.git", rev = "cc4e527eafcbd621381d36fa48c4612624c7cc3a"}
+esp-hal-embassy     = { git = "https://github.com/Ion-Mobility/esp-hal.git", rev = "cc4e527eafcbd621381d36fa48c4612624c7cc3a"}
+esp-backtrace       = { git = "https://github.com/Ion-Mobility/esp-hal.git", rev = "cc4e527eafcbd621381d36fa48c4612624c7cc3a"}
+esp-alloc           = { git = "https://github.com/Ion-Mobility/esp-hal.git", rev = "cc4e527eafcbd621381d36fa48c4612624c7cc3a"}
+esp-println         = { git = "https://github.com/Ion-Mobility/esp-hal.git", rev = "cc4e527eafcbd621381d36fa48c4612624c7cc3a"}
+esp-wifi            = { git = "https://github.com/Ion-Mobility/esp-hal.git", rev = "cc4e527eafcbd621381d36fa48c4612624c7cc3a"}
+esp-storage         = { git = "https://github.com/Ion-Mobility/esp-hal.git", rev = "cc4e527eafcbd621381d36fa48c4612624c7cc3a"}
